Agregando ConnectionString all appsettings.json y la libreria SqlServer

--- a/App/appsettings.json
+++ b/App/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection":"Server=(local);Database=InventarioEF;Integrated Security=true;Encrypt=false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
