--- a/App/Inventario.csproj
+++ b/App/Inventario.csproj
@@ -16,4 +16,8 @@
     </ProjectReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
+  </ItemGroup>
+
 </Project>
